<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">校园论坛</string>
    <string name="article_detail">文章详情</string>
    <string name="profile">个人中心</string>
    <string name="create_article">发布文章</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="qq_number">QQ号码</string>
    <string name="display_name">显示名称</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="confirm_password">确认密码</string>
    <string name="login_subtitle">欢迎回来</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="no_account">还没有账号？</string>
    <string name="register_now">立即注册</string>
    <string name="avatar">头像</string>
    <string name="article_title">标题</string>
    <string name="article_content">内容</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="like">点赞</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="report">举报</string>
    <string name="articles">文章</string>
    <string name="followers">粉丝</string>
    <string name="following">关注</string>
    <string name="drafts">草稿箱</string>
    <string name="edit_profile">编辑资料</string>
    <string name="comments">评论</string>
</resources>
